--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,13 @@
     "@types/react-dom": "^16.9.0",
     "apollo-boost": "^0.4.7",
     "apollo-link-token-refresh": "^0.2.7",
+    "apollo-upload-client": "^12.1.0",
     "cors": "^2.8.5",
     "graphql": "^14.6.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-dropzone": "^10.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
@@ -49,9 +51,11 @@
     "@graphql-codegen/typescript": "1.13.0",
     "@graphql-codegen/typescript-operations": "1.13.0",
     "@graphql-codegen/typescript-react-apollo": "1.13.0",
+    "@types/apollo-upload-client": "^8.1.3",
     "@types/cors": "^2.8.6",
     "@types/graphql": "^14.5.0",
     "@types/jwt-decode": "^2.2.1",
+    "@types/react-dropzone": "^5.1.0",
     "@types/react-router-dom": "^5.1.3"
   }
 }
