--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "cors": "^2.8.5",
     "graphql": "^14.6.0",
     "jwt-decode": "^2.2.0",
+    "leaflet": "^1.6.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-dropzone": "^10.2.1",
+    "react-leaflet": "^2.6.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
@@ -56,6 +58,7 @@
     "@types/graphql": "^14.5.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/react-dropzone": "^5.1.0",
+    "@types/react-leaflet": "^2.5.1",
     "@types/react-router-dom": "^5.1.3"
   }
 }
