--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,13 +15,13 @@
     "apollo-link-token-refresh": "^0.2.7",
     "apollo-upload-client": "^12.1.0",
     "cors": "^2.8.5",
+    "d3": "^5.15.0",
     "graphql": "^14.6.0",
     "jwt-decode": "^2.2.0",
     "leaflet": "^1.6.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-dropzone": "^10.2.1",
-    "react-leaflet": "^2.6.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
@@ -55,6 +55,7 @@
     "@graphql-codegen/typescript-react-apollo": "1.13.0",
     "@types/apollo-upload-client": "^8.1.3",
     "@types/cors": "^2.8.6",
+    "@types/d3": "^5.7.2",
     "@types/graphql": "^14.5.0",
     "@types/jwt-decode": "^2.2.1",
     "@types/react-dropzone": "^5.1.0",
